Fix responsiveness on mobile devices

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10,27 +10,10 @@ body {
     background-image: var(--wallpaper);
     background-position: bottom center;
     background-size: cover;
+    background-attachment: fixed;
     height: 100vh;
 
 }
-
-.ccenter {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-
-/* li:hover {
-    background-color: white;
-    color: black;
-    cursor: pointer;
-    border-radius: 10px;
-}
-
-li {
-    padding-top: 5px;
-} */
 
 #content a,
 #content a:link,
